WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155890
Disk cache speculative validation requests do not have the 'Referer' HTTP header set
https://bugs.webkit.org/show_bug.cgi?id=155890
Summary
Disk cache speculative validation requests do not have the 'Referer' HTTP hea...
Chris Dumez
Reported
2016-03-25 10:23:25 PDT
Disk cache speculative validation requests do not have the 'Referer' HTTP header set. This is breaking some streaming sites (such as twitch.tv).
Attachments
Patch
(29.85 KB, patch)
2016-03-27 15:39 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(31.00 KB, patch)
2016-03-28 09:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-03-25 10:23:46 PDT
rdar://problem/25279962
Chris Dumez
Comment 2
2016-03-27 15:39:32 PDT
Created
attachment 274999
[details]
Patch
Antti Koivisto
Comment 3
2016-03-28 05:34:50 PDT
Comment on
attachment 274999
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274999&action=review
r=me
> LayoutTests/http/tests/cache/disk-cache/speculative-validation/validation-request-expected.txt:8 > +PASS validationRequestHeader('Referer') is initialReferer
The test seems rather barebones considering this affects all headers, not just "Referer'
Chris Dumez
Comment 4
2016-03-28 09:03:47 PDT
Created
attachment 275022
[details]
Patch
Chris Dumez
Comment 5
2016-03-28 09:04:31 PDT
Comment on
attachment 275022
[details]
Patch Clearing flags on attachment: 275022 Committed
r198741
: <
http://trac.webkit.org/changeset/198741
>
Chris Dumez
Comment 6
2016-03-28 09:04:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug