Source/WebCore/platform/network/HTTPHeaderMap.h
@@ -139,7 +139,7 @@ public:
     WEBCORE_EXPORT String get(const String& name) const;
     WEBCORE_EXPORT void set(const String& name, const String& value);
     void add(const String& name, const String& value);
-    bool contains(const String&) const;
+    WEBCORE_EXPORT bool contains(const String&) const;
     bool remove(const String&);
 
     WEBCORE_EXPORT String get(HTTPHeaderName) const;
